# zero-rk

./: Makefile
applications/cfd_plugin/: CMakeLists.txt  zerork_random_reactors_test.cpp  zerork_random_sampling_test.cpp
applications/cfd_plugin/interfaces/radau5_cpp/: radau_cpp.cpp
cmake/: gpu.cmake  magma.CMakeLists.Internal.txt  magma.cmake  sundials.cmake  superlu.cmake  superlu_dist.cmake
scripts/: build_aurora.sh
src/zerork/: CMakeLists.txt  mechanism_cuda.cpp  mechanism_kernels.cpp  nasa_poly_kernels.cpp  rate_const_kernels.cpp  scatter_add_kernels.cpp
tools/gpuMultiOdeFuncTester/: CMakeLists.txt
