
add_executable(gpuMultiOdeFuncTester.x gpuMultiOdeFuncTester.cpp)
add_executable(gpuMultiOdeFunc.x gpuMultiOdeFunc.cpp)

target_link_libraries(gpuMultiOdeFunc.x zerork_cuda sundials_nvecserial sundials_nvechip lapack blas)
target_link_libraries(gpuMultiOdeFuncTester.x zerork_cuda sundials_nvecserial sundials_nvechip lapack blas)

